refactor: IFetchConfig->IConfig fix: npm run publish

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       eventCollection.addCustomData({ custom_user_id: 1 });
       eventCollection.addCustomData({ custom_token: "token_example" });
       let data = eventCollection.getData("load");
+      console.log(data);
       document.getElementById("output").innerHTML = JSON.stringify(
         data,
         null,
